// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndividualsData mock query for getIndividuals 1`] = `
<individualsgrid-stub
  class="grid"
  individuals="[object Object]"
/>
`;

exports[`IndividualsTable Mock query for getCountries 1`] = `
<section
  class=""
>
  <v-row-stub
    class="header justify-space-between"
    tag="div"
  >
    <h3
      class="title"
    >
      <v-icon-stub
        color="black"
        dense=""
        left=""
      >
         mdi-account 
      </v-icon-stub>
      
      Individuals
      
      <v-chip-stub
        active="true"
        activeclass=""
        class="ml-2"
        closeicon="$delete"
        closelabel="$vuetify.close"
        data-cy="individual-counter"
        filtericon="$complete"
        pill="true"
        small="true"
        tag="span"
      >
        
        0
      
      </v-chip-stub>
    </h3>
     
    <div>
      <recommendations-stub />
       
      <v-btn-stub
        activeclass=""
        class="black--text"
        color="secondary"
        data-cy="individual-add"
        depressed="true"
        height="34"
        small="true"
        tag="button"
        type="button"
      >
        
        Add
      
      </v-btn-stub>
    </div>
  </v-row-stub>
   
  <v-row-stub
    class="actions"
    tag="div"
  >
    <v-checkbox-stub
      backgroundcolor=""
      class="mt-0"
      errorcount="1"
      errormessages=""
      indeterminateicon="$checkboxIndeterminate"
      label="Select all"
      messages=""
      officon="$checkboxOff"
      onicon="$checkboxOn"
      ripple="true"
      rules=""
      successmessages=""
      value=""
      valuecomparator="[Function]"
    />
     
    <search-stub
      class="search-box pa-0 flex-grow-1"
      filterselector="true"
      orderoptions="[object Object],[object Object],[object Object],[object Object]"
      orderselector="true"
      validfilters="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    />
     
    <v-tooltip-stub
      bottom="true"
      closedelay="0"
      contentclass=""
      maxwidth="auto"
      nudgebottom="0"
      nudgeleft="0"
      nudgeright="0"
      nudgetop="0"
      nudgewidth="0"
      opendelay="200"
      openonclick="true"
      openonfocus="true"
      openonhover="true"
      tag="span"
      transition="expand-y-transition"
    >
       
      <span>
        Merge selected
      </span>
    </v-tooltip-stub>
     
    <v-tooltip-stub
      bottom="true"
      closedelay="0"
      contentclass=""
      maxwidth="auto"
      nudgebottom="0"
      nudgeleft="0"
      nudgeright="0"
      nudgetop="0"
      nudgewidth="0"
      opendelay="200"
      openonclick="true"
      openonfocus="true"
      openonhover="true"
      tag="span"
      transition="expand-y-transition"
    >
       
      <span>
        Delete selected
      </span>
    </v-tooltip-stub>
  </v-row-stub>
   
  <v-data-table-stub
    customfilter="[Function]"
    customgroup="[Function]"
    customsort="[Function]"
    expanded=""
    expandicon="$expand"
    groupby=""
    groupdesc=""
    headers="[object Object],[object Object],[object Object],[object Object]"
    hidedefaultfooter="true"
    hidedefaultheader="true"
    itemclass=""
    itemkey="uuid"
    items=""
    itemsperpage="10"
    loaderheight="4"
    loadingtext="$vuetify.dataIterator.loadingText"
    locale="en-US"
    mobilebreakpoint="600"
    nodatatext="$vuetify.noDataText"
    noresultstext="$vuetify.dataIterator.noResultsText"
    options="[object Object]"
    page="0"
    selectablekey="isSelectable"
    serveritemslength="-1"
    value=""
  />
   
  <div
    class="d-flex align-baseline text-center pt-2"
  >
    <v-col-stub
      class="ml-auto"
      cols="8"
      tag="div"
    >
      <v-pagination-stub
        currentpagearialabel="$vuetify.pagination.ariaLabel.currentPage"
        length="0"
        nextarialabel="$vuetify.pagination.ariaLabel.next"
        nexticon="$next"
        pagearialabel="$vuetify.pagination.ariaLabel.page"
        previcon="$prev"
        previousarialabel="$vuetify.pagination.ariaLabel.previous"
        totalvisible="7"
        value="0"
        wrapperarialabel="$vuetify.pagination.ariaLabel.wrapper"
      />
    </v-col-stub>
     
    <v-col-stub
      cols="2"
      tag="div"
    >
      <v-text-field-stub
        backgroundcolor=""
        class="mr-3"
        clearicon="$clear"
        errorcount="1"
        errormessages=""
        label="Items per page"
        loaderheight="2"
        max="0"
        messages=""
        min="1"
        rules=""
        successmessages=""
        type="number"
        value="10"
      />
    </v-col-stub>
  </div>
   
  <v-dialog-stub
    closedelay="0"
    contentclass=""
    maxwidth="500px"
    opendelay="0"
    openonclick="true"
    origin="center center"
    retainfocus="true"
    transition="dialog-transition"
  >
    <v-card-stub
      class="pa-3"
      loaderheight="4"
      tag="div"
    >
      <v-card-title-stub
        class="headline"
        tag="div"
      >
        
      </v-card-title-stub>
       
      <v-card-text-stub
        tag="div"
      >
        <!---->
         
        <!---->
      </v-card-text-stub>
       
      <v-card-actions-stub
        tag="div"
      >
        <v-spacer-stub
          tag="div"
        />
         
        <v-btn-stub
          activeclass=""
          color="primary"
          tag="button"
          text="true"
          type="button"
        >
           OK 
        </v-btn-stub>
      </v-card-actions-stub>
    </v-card-stub>
  </v-dialog-stub>
   
  <profile-modal-stub
    addidentity="[Function]"
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    getcountries="[Function]"
    updateprofile="[Function]"
  />
   
  <enroll-modal-stub
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    text=""
    title=""
  />
   
  <!---->
   
  <!---->
   
  <v-card-stub
    class="dragged-item"
    color="primary"
    dark="true"
    loaderheight="4"
    tag="div"
  >
    <v-card-subtitle-stub
      tag="div"
    >
      
      Moving
      0
      individual
    
    </v-card-subtitle-stub>
  </v-card-stub>
</section>
`;

exports[`IndividualsTable Mock query for getPaginatedIndividuals 1`] = `
<section
  class=""
>
  <v-row-stub
    class="header justify-space-between"
    tag="div"
  >
    <h3
      class="title"
    >
      <v-icon-stub
        color="black"
        dense=""
        left=""
      >
         mdi-account 
      </v-icon-stub>
      
      Individuals
      
      <v-chip-stub
        active="true"
        activeclass=""
        class="ml-2"
        closeicon="$delete"
        closelabel="$vuetify.close"
        data-cy="individual-counter"
        filtericon="$complete"
        pill="true"
        small="true"
        tag="span"
      >
        
        0
      
      </v-chip-stub>
    </h3>
     
    <div>
      <recommendations-stub />
       
      <v-btn-stub
        activeclass=""
        class="black--text"
        color="secondary"
        data-cy="individual-add"
        depressed="true"
        height="34"
        small="true"
        tag="button"
        type="button"
      >
        
        Add
      
      </v-btn-stub>
    </div>
  </v-row-stub>
   
  <v-row-stub
    class="actions"
    tag="div"
  >
    <v-checkbox-stub
      backgroundcolor=""
      class="mt-0"
      errorcount="1"
      errormessages=""
      indeterminateicon="$checkboxIndeterminate"
      label="Select all"
      messages=""
      officon="$checkboxOff"
      onicon="$checkboxOn"
      ripple="true"
      rules=""
      successmessages=""
      value=""
      valuecomparator="[Function]"
    />
     
    <search-stub
      class="search-box pa-0 flex-grow-1"
      filterselector="true"
      orderoptions="[object Object],[object Object],[object Object],[object Object]"
      orderselector="true"
      validfilters="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    />
     
    <v-tooltip-stub
      bottom="true"
      closedelay="0"
      contentclass=""
      maxwidth="auto"
      nudgebottom="0"
      nudgeleft="0"
      nudgeright="0"
      nudgetop="0"
      nudgewidth="0"
      opendelay="200"
      openonclick="true"
      openonfocus="true"
      openonhover="true"
      tag="span"
      transition="expand-y-transition"
    >
       
      <span>
        Merge selected
      </span>
    </v-tooltip-stub>
     
    <v-tooltip-stub
      bottom="true"
      closedelay="0"
      contentclass=""
      maxwidth="auto"
      nudgebottom="0"
      nudgeleft="0"
      nudgeright="0"
      nudgetop="0"
      nudgewidth="0"
      opendelay="200"
      openonclick="true"
      openonfocus="true"
      openonhover="true"
      tag="span"
      transition="expand-y-transition"
    >
       
      <span>
        Delete selected
      </span>
    </v-tooltip-stub>
  </v-row-stub>
   
  <v-data-table-stub
    customfilter="[Function]"
    customgroup="[Function]"
    customsort="[Function]"
    expanded=""
    expandicon="$expand"
    groupby=""
    groupdesc=""
    headers="[object Object],[object Object],[object Object],[object Object]"
    hidedefaultfooter="true"
    hidedefaultheader="true"
    itemclass=""
    itemkey="uuid"
    items=""
    itemsperpage="10"
    loaderheight="4"
    loadingtext="$vuetify.dataIterator.loadingText"
    locale="en-US"
    mobilebreakpoint="600"
    nodatatext="$vuetify.noDataText"
    noresultstext="$vuetify.dataIterator.noResultsText"
    options="[object Object]"
    page="0"
    selectablekey="isSelectable"
    serveritemslength="-1"
    value=""
  />
   
  <div
    class="d-flex align-baseline text-center pt-2"
  >
    <v-col-stub
      class="ml-auto"
      cols="8"
      tag="div"
    >
      <v-pagination-stub
        currentpagearialabel="$vuetify.pagination.ariaLabel.currentPage"
        length="0"
        nextarialabel="$vuetify.pagination.ariaLabel.next"
        nexticon="$next"
        pagearialabel="$vuetify.pagination.ariaLabel.page"
        previcon="$prev"
        previousarialabel="$vuetify.pagination.ariaLabel.previous"
        totalvisible="7"
        value="0"
        wrapperarialabel="$vuetify.pagination.ariaLabel.wrapper"
      />
    </v-col-stub>
     
    <v-col-stub
      cols="2"
      tag="div"
    >
      <v-text-field-stub
        backgroundcolor=""
        class="mr-3"
        clearicon="$clear"
        errorcount="1"
        errormessages=""
        label="Items per page"
        loaderheight="2"
        max="0"
        messages=""
        min="1"
        rules=""
        successmessages=""
        type="number"
        value="10"
      />
    </v-col-stub>
  </div>
   
  <v-dialog-stub
    closedelay="0"
    contentclass=""
    maxwidth="500px"
    opendelay="0"
    openonclick="true"
    origin="center center"
    retainfocus="true"
    transition="dialog-transition"
  >
    <v-card-stub
      class="pa-3"
      loaderheight="4"
      tag="div"
    >
      <v-card-title-stub
        class="headline"
        tag="div"
      >
        
      </v-card-title-stub>
       
      <v-card-text-stub
        tag="div"
      >
        <!---->
         
        <!---->
      </v-card-text-stub>
       
      <v-card-actions-stub
        tag="div"
      >
        <v-spacer-stub
          tag="div"
        />
         
        <v-btn-stub
          activeclass=""
          color="primary"
          tag="button"
          text="true"
          type="button"
        >
           OK 
        </v-btn-stub>
      </v-card-actions-stub>
    </v-card-stub>
  </v-dialog-stub>
   
  <profile-modal-stub
    addidentity="[Function]"
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    getcountries="[Function]"
    updateprofile="[Function]"
  />
   
  <enroll-modal-stub
    addorganization="[Function]"
    enroll="[Function]"
    fetchorganizations="[Function]"
    text=""
    title=""
  />
   
  <!---->
   
  <!---->
   
  <v-card-stub
    class="dragged-item"
    color="primary"
    dark="true"
    loaderheight="4"
    tag="div"
  >
    <v-card-subtitle-stub
      tag="div"
    >
      
      Moving
      0
      individual
    
    </v-card-subtitle-stub>
  </v-card-stub>
</section>
`;

exports[`JobsTable Mock query for getJobs 1`] = `
<v-container-stub
  class="jobs section mb-5 pa-0"
  tag="div"
>
  <header
    class="header"
  >
    <h4
      class="title"
    >
      <v-icon-stub
        color="black"
        dense=""
        left=""
      >
         mdi-tray-full 
      </v-icon-stub>
      
      Jobs
    
    </h4>
     
    <v-btn-stub
      activeclass=""
      class="black--text"
      color="secondary"
      depressed="true"
      height="34"
      small="true"
      tag="button"
      type="button"
    >
      
      Add
    
    </v-btn-stub>
  </header>
   
  <v-simple-table-stub />
   
  <div
    class="text-center pa-4"
  >
    <v-pagination-stub
      currentpagearialabel="$vuetify.pagination.ariaLabel.currentPage"
      length="2"
      nextarialabel="$vuetify.pagination.ariaLabel.next"
      nexticon="$next"
      pagearialabel="$vuetify.pagination.ariaLabel.page"
      previcon="$prev"
      previousarialabel="$vuetify.pagination.ariaLabel.previous"
      totalvisible="5"
      value="2"
      wrapperarialabel="$vuetify.pagination.ariaLabel.wrapper"
    />
  </div>
   
  <job-modal-stub
    types="[object Object],[object Object],[object Object],[object Object]"
  />
</v-container-stub>
`;

exports[`OrganizationsTable Mock query for getPaginatedOrganizations 1`] = `
<section
  class="section"
>
  <v-row-stub
    class="header"
    tag="div"
  >
    <h4
      class="title"
    >
      <v-icon-stub
        color="black"
        dense=""
        left=""
      >
        
        mdi-sitemap
      
      </v-icon-stub>
      
      Organizations
      
      <v-chip-stub
        active="true"
        activeclass=""
        class="ml-2"
        closeicon="$delete"
        closelabel="$vuetify.close"
        filtericon="$complete"
        pill="true"
        small="true"
        tag="span"
      >
        2
      </v-chip-stub>
    </h4>
     
    <v-btn-stub
      activeclass=""
      class="black--text"
      color="secondary"
      depressed="true"
      height="34"
      small="true"
      tag="button"
      type="button"
    >
      
      Add
    
    </v-btn-stub>
  </v-row-stub>
   
  <v-row-stub
    class="actions"
    tag="div"
  >
    <search-stub
      class="mr-3 pa-0 flex-grow-0"
      orderoptions="[object Object]"
      validfilters=""
    />
  </v-row-stub>
   
  <v-data-table-stub
    customfilter="[Function]"
    customgroup="[Function]"
    customsort="[Function]"
    expanded=""
    expandicon="$expand"
    groupby=""
    groupdesc=""
    headers="[object Object],[object Object],[object Object]"
    hidedefaultfooter="true"
    hidedefaultheader="true"
    itemclass=""
    itemkey="id"
    items="[object Object],[object Object]"
    itemsperpage="10"
    loaderheight="4"
    loadingtext="$vuetify.dataIterator.loadingText"
    locale="en-US"
    mobilebreakpoint="600"
    nodatatext="$vuetify.noDataText"
    noresultstext="$vuetify.dataIterator.noResultsText"
    options="[object Object]"
    page="1"
    selectablekey="isSelectable"
    serveritemslength="-1"
    value=""
  />
   
  <div
    class="pagination text-center pa-3"
  >
    <div
      aria-hidden="true"
    />
     
    <v-pagination-stub
      currentpagearialabel="$vuetify.pagination.ariaLabel.currentPage"
      length="1"
      nextarialabel="$vuetify.pagination.ariaLabel.next"
      nexticon="$next"
      pagearialabel="$vuetify.pagination.ariaLabel.page"
      previcon="$prev"
      previousarialabel="$vuetify.pagination.ariaLabel.previous"
      totalvisible="5"
      value="1"
      wrapperarialabel="$vuetify.pagination.ariaLabel.wrapper"
    />
     
    <v-text-field-stub
      backgroundcolor=""
      class="mr-3"
      clearicon="$clear"
      errorcount="1"
      errormessages=""
      hidedetails="true"
      label="Items per page"
      loaderheight="2"
      max="2"
      messages=""
      min="1"
      rules=""
      successmessages=""
      type="number"
      value="10"
    />
  </div>
   
  <organization-modal-stub
    addalias="[Function]"
    adddomain="[Function]"
    addorganization="[Function]"
    aliases=""
    deletealias="[Function]"
    deletedomain="[Function]"
    domains=""
  />
   
  <v-dialog-stub
    closedelay="0"
    contentclass=""
    maxwidth="500px"
    opendelay="0"
    openonclick="true"
    origin="center center"
    retainfocus="true"
    transition="dialog-transition"
  >
    <v-card-stub
      class="pa-3"
      loaderheight="4"
      tag="div"
    >
      <v-card-title-stub
        class="headline"
        tag="div"
      >
        
      </v-card-title-stub>
       
      <v-card-text-stub
        tag="div"
      >
        <p
          class="pt-2 pb-2 text-body-2"
        >
          
        </p>
         
        <!---->
      </v-card-text-stub>
       
      <v-card-actions-stub
        tag="div"
      >
        <v-spacer-stub
          tag="div"
        />
         
        <v-btn-stub
          activeclass=""
          color="primary"
          tag="button"
          text="true"
          type="button"
        >
           OK 
        </v-btn-stub>
      </v-card-actions-stub>
    </v-card-stub>
  </v-dialog-stub>
</section>
`;

exports[`TeamModal Mock query for getPaginatedTeams 1`] = `<!---->`;
